Fixed the overlap problem between the homepage and features sections

--- a/style.css
+++ b/style.css
@@ -5,161 +5,11 @@ body{
     font-family: 'Quicksand', sans-serif;
 }
 
-h1, h2, h3{
-	font-weight: normal;
-	font-family: 'Montserrat', sans-serif;
-}
-
 hr{
 	height: 1em;
 	border: none;
 	background-color: white;
 	margin: 0;
-}
-
-
-
-#aboutUs{
-	background-image: url("images/road1.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
-	overflow: auto;
-	background-position: center center;
-}
-
-div.aboutus{
-	text-align: center;
-	padding: 0 0 7em 0;
-}
-
-a{
-	text-decoration: none;
-}
-
-a.aboutus{
-	background-color: lightgray;
-	font-size: 1.5em;
-	padding: 0.5em 1em;
-	color: black;
-	width: 5.5em;
-}
-
-a.aboutus:hover{
-	background-color: #f26d00;
-	color: white;
-}
-
-
-
-#contactUs{
-	background-image: url("images/city2.jpg");
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
-}
-
-form.contactus{
-	padding: 0 5em 6em 5em;
-	color: white;
-}
-
-input[type=text], select, textarea{
-	width: 100%;
-	padding: 1em;
-	border: 1px, solid, grey;
-	margin: 0.5em 0 1em 0;
-	resize: vertical;
-	font-size: 1em;
-    font-family: 'Quicksand', sans-serif;
-}
-
-label{
-	font-size: 1.5em;
-}
-
-input[type=submit]{
-	padding: 0.5em 1em;
-	font-size: 1.2em;
-	background-color: #f26d00;
-	color: white;
-	border: none;
-}
-
-input[type=submit]:hover{
-	background-color: grey;
-	cursor: pointer;
-}
-
-span.important{
-	color: #f26d00;
-}
-
-p.aboutus{
-	color: white;
-	text-shadow: 2px 0 0 grey, -2px 0 0 grey, 0 2px 0 grey, 0 -2px 0 grey, 1px 1px grey, -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey;
-}
-
-
-#homePage{
-    background-image: url(images/homePageBackground.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    position:absolute;
-    background-position: fixed;
-}
-
-
-#topnav{
-    position:sticky;
-    padding-top: 10px;
-    padding: 25px;
-    text-align: right;
-    /*background-image:  linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));*/
-    width: 98%;
-    top:0%;
-    left: 0%;
-    z-index: 1;
-}
-
-#logo{
-    left: 15px;
-    bottom: 0;
-    position: absolute;
-}
-
-#topnav a:hover{
-background-color: white;
-color: black;
-border-radius: 5px;
-}
-#topnav a{
-    text-align: right;
-    text-decoration: none;
-    color: white;
-    font-size: 30px;
-    padding: 15px;
-    padding-right: 15px;
-}
-#presentation{
-    position:absolute;
-    text-align: center;
-    top: 40%;
-    left: 30%;
-    color: white;
-}
-#presentation1{
-    font-size: 180px;
-    font-weight: 100;
-    font-family: Arial, Helvetica, sans-serif;
-}
-#presentation2{
-    font-size: 20px;
 }
 
 h1, h2, h3{
@@ -185,40 +35,67 @@ h3{
 	color: #f26d00;
 }
 
-table, #pricing th, #pricing td{
-padding: 14px;
-border-collapse: collapse;
-text-align: center;
-width: 37%;
+/*Top navigation menu*/
+
+#topnav{
+    position:fixed;
+    padding-top: 10px;
+    padding: 25px;
+    text-align: right;
+    background-image:  linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+    width: 98%;
+    top:0%;
+    left: 0%;
+    z-index: 1;
 }
 
-#premium{
-	background-color: #f26d00;
-}
-#darkprem{
-	background-color: #ff7a0d;
+#logo{
+    left: 15px;
+    bottom: 0;
+    position: absolute;
 }
 
-#pricing tr:nth-child(even){background-color: #f2f2f2;}
-
-#upgrade a{
-	border: 1px solid #f26d00;
-  	border-radius: 25px;
-  	color: #f26d00;
-  	font-weight: bold;
-	font-size: 16px;
-  	padding: 13px 25px;
-  	text-align: center;
-  	text-decoration: none;
-  	display: inline-block;
-	margin-left: 60px;
-	font-family: "Arial", sans-serif;
+#topnav a:hover{
+background-color: white;
+color: black;
+border-radius: 5px;
 }
-#upgrade a:hover{
-  transition: all .25s ease;
-  color: white;
-  background-color: #f26d00;
-  //box-shadow: 3px 3px 1px grey;
+
+#topnav a{
+    text-align: right;
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+    padding: 15px;
+    padding-right: 15px;
+}
+
+/*home page*/
+
+#homePage{
+    background-image: url(images/homePageBackground.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+	background-attachment: fixed;
+}
+#presentation{
+    position:absolute;
+    text-align: center;
+    top: 40%;
+    left: 30%;
+    color: white;
+}
+#presentation1{
+    font-size: 180px;
+    font-weight: 100;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#presentation2{
+    font-size: 20px;
 }
 
 /* FEATURES CSS /*
@@ -297,5 +174,127 @@ h2.feat-title {
 	font-weight: normal;
 	font-family: 'Montserrat', sans-serif;
 	border-left: none;
+}
+
+/*Pricing*/
+
+table, #pricing th, #pricing td{
+	padding: 14px;
+	border-collapse: collapse;
+	text-align: center;
+	width: 37%;
+	}
+	
+	#premium{
+		background-color: #f26d00;
+	}
+	#darkprem{
+		background-color: #ff7a0d;
+	}
+	
+	#pricing tr:nth-child(even){background-color: #f2f2f2;}
+	
+	#upgrade a{
+		border: 1px solid #f26d00;
+		  border-radius: 25px;
+		  color: #f26d00;
+		  font-weight: bold;
+		font-size: 16px;
+		  padding: 13px 25px;
+		  text-align: center;
+		  text-decoration: none;
+		  display: inline-block;
+		margin-left: 60px;
+		font-family: "Arial", sans-serif;
+	}
+	#upgrade a:hover{
+	  transition: all .25s ease;
+	  color: white;
+	  background-color: #f26d00;
+	  box-shadow: 3px 3px 1px grey;
+	}
+
+/*About us*/
+
+#aboutUs{
+	background-image: url("images/road1.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	overflow: auto;
+	background-position: center center;
+}
+
+div.aboutus{
+	text-align: center;
+	padding: 0 0 7em 0;
+}
+
+a{
+	text-decoration: none;
+}
+
+a.aboutus{
+	background-color: lightgray;
+	font-size: 1.5em;
+	padding: 0.5em 1em;
+	color: black;
+	width: 5.5em;
+}
+
+a.aboutus:hover{
+	background-color: #f26d00;
+	color: white;
+}
+
+/*Contact us*/
+
+#contactUs{
+	background-image: url("images/city2.jpg");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+form.contactus{
+	padding: 0 5em 6em 5em;
+	color: white;
+}
+
+input[type=text], select, textarea{
+	width: 100%;
+	padding: 1em;
+	border: 1px, solid, grey;
+	margin: 0.5em 0 1em 0;
+	resize: vertical;
+	font-size: 1em;
+    font-family: 'Quicksand', sans-serif;
+}
+
+label{
+	font-size: 1.5em;
+}
+
+input[type=submit]{
+	padding: 0.5em 1em;
+	font-size: 1.2em;
+	background-color: #f26d00;
+	color: white;
+	border: none;
+}
+
+input[type=submit]:hover{
+	background-color: grey;
+	cursor: pointer;
+}
+
+span.important{
+	color: #f26d00;
+}
+
+p.aboutus{
+	color: white;
+	text-shadow: 2px 0 0 grey, -2px 0 0 grey, 0 2px 0 grey, 0 -2px 0 grey, 1px 1px grey, -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey;
 }
 
